--- a/shop.html
+++ b/shop.html
@@ -103,6 +103,31 @@
         .p-price { color: var(--primary); font-weight: bold; font-size: 15px; margin-top: 4px; }
         .sold-badge { position: absolute; top: 8px; left: 8px; background: #ef4444; color: white; font-size: 10px; padding: 2px 8px; border-radius: 6px; font-weight: bold; z-index: 10; }
 
+        /* হেল্পলাইন বাটন স্টাইল */
+        .whatsapp-helpline {
+            position: fixed;
+            bottom: 30px;
+            right: 20px;
+            background: #25d366;
+            color: white;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 32px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            z-index: 9999;
+            text-decoration: none;
+            animation: pulse-green 2s infinite;
+        }
+        @keyframes pulse-green {
+            0% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
+            70% { transform: scale(1); box-shadow: 0 0 0 15px rgba(37, 211, 102, 0); }
+            100% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
+        }
+
         @keyframes slideIn { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
         @media (max-width: 480px) { .product-grid { grid-template-columns: 1fr 1fr; gap: 10px; } }
     </style>
@@ -125,6 +150,10 @@
         </div>
     </div>
 </header>
+
+<a href="https://wa.me/8801319474450" class="whatsapp-helpline" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
 
 <div class="slider-wrapper">
     <div class="slider-container" id="sliderContainer">
