--- a/verified.html
+++ b/verified.html
@@ -1,21 +1,130 @@
 <!DOCTYPE html>
-<html>
+<html lang="bn">
 <head>
-    <title>Account Verified</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Account Verified - MS STORE</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
     <style>
-        body { background: #0f172a; color: white; font-family: sans-serif; text-align: center; padding-top: 100px; }
-        .card { background: rgba(255,255,255,0.1); padding: 40px; border-radius: 20px; display: inline-block; }
-        .icon { font-size: 60px; color: #00d2ff; }
-        button { background: #00d2ff; border: none; padding: 10px 20px; border-radius: 10px; cursor: pointer; font-weight: bold; margin-top: 20px; }
+        :root {
+            --primary: #00d2ff;
+            --dark: #0f172a;
+            --glass: rgba(255, 255, 255, 0.05);
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+            background-color: var(--dark);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        .card {
+            background: var(--glass);
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 40px 30px;
+            border-radius: 24px;
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+            animation: fadeIn 0.8s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .success-icon {
+            width: 80px;
+            height: 80px;
+            background: rgba(0, 210, 255, 0.1);
+            color: var(--primary);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 40px;
+            margin: 0 auto 20px;
+            border: 2px solid var(--primary);
+            animation: scaleIn 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.3s both;
+        }
+
+        @keyframes scaleIn {
+            from { transform: scale(0); }
+            to { transform: scale(1); }
+        }
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 10px;
+            color: #f1f5f9;
+        }
+
+        p {
+            color: #94a3b8;
+            font-size: 15px;
+            line-height: 1.6;
+            margin-bottom: 30px;
+        }
+
+        .btn {
+            display: block;
+            background: var(--primary);
+            color: var(--dark);
+            text-decoration: none;
+            padding: 14px;
+            border-radius: 14px;
+            font-weight: 600;
+            transition: 0.3s;
+            box-shadow: 0 4px 15px rgba(0, 210, 255, 0.3);
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(0, 210, 255, 0.5);
+        }
+
+        .footer-text {
+            margin-top: 20px;
+            font-size: 12px;
+            color: #64748b;
+        }
     </style>
 </head>
 <body>
+
     <div class="card">
-        <div class="icon">✔</div>
-        <h1>Your Account is Verified!</h1>
-        <p>এখন আপনি ব্যাক করে অ্যাপে ফিরে যান অথবা নিচের বাটনে ক্লিক করুন।</p>
-        <button onclick="window.close()">অ্যাপে ফিরে যান</button>
+        <div class="success-icon">
+            <i class="fa fa-check"></i>
+        </div>
+        <h1>অ্যাকাউন্ট ভেরিফাইড!</h1>
+        <p>অভিনন্দন! আপনার ইমেইল সফলভাবে ভেরিফাই করা হয়েছে। আপনার শপিং অ্যাপটি এখন পুরোপুরি সক্রিয়।</p>
+        
+        <a href="shop.html" class="btn">হোম পেজে ফিরে যান</a>
+
+        <div class="footer-text">
+            আপনি এই ট্যাবটি বন্ধ করে আগের ট্যাবে ফিরে যেতে পারেন।
+        </div>
     </div>
+
+    <script>
+        // ৫ সেকেন্ড পর অটোমেটিক রিডাইরেক্ট করার অপশন (ঐচ্ছিক)
+        /*
+        setTimeout(() => {
+            window.location.href = "shop.html";
+        }, 5000);
+        */
+    </script>
 </body>
 </html>
-
