--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <style>
         :root {
-            --deep-sky: #001a2c; /* Deep Sky Blue Dark base */
+            --deep-sky: #001a2c;
             --accent: #00d2ff;
             --glass: rgba(255, 255, 255, 0.03);
             --border: rgba(255, 255, 255, 0.1);
@@ -26,148 +26,136 @@
             overflow-x: hidden;
         }
 
-        /* --- Header --- */
-        nav {
-            padding: 25px 5%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        /* --- Smart App Popup Style --- */
+        .app-popup {
             position: fixed;
-            width: 100%;
-            z-index: 1000;
+            top: -120px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
+            max-width: 400px;
+            background: rgba(0, 26, 44, 0.9);
+            backdrop-filter: blur(20px);
+            border: 1px solid var(--border);
+            border-radius: 20px;
+            padding: 15px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            z-index: 9999;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.6);
+            transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        .app-popup.active { top: 20px; }
+
+        .app-icon-box {
+            width: 50px; height: 50px;
+            background: var(--accent);
+            border-radius: 12px;
+            display: grid; place-items: center;
+            color: #001a2c; font-size: 24px;
+            box-shadow: 0 0 15px rgba(0, 210, 255, 0.3);
+        }
+
+        .app-text { flex: 1; }
+        .app-text h4 { font-size: 14px; margin-bottom: 2px; font-weight: 700; }
+        .app-text p { font-size: 11px; color: #94a3b8; }
+
+        .btn-download {
+            background: var(--accent);
+            color: #001a2c;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 10px;
+            font-weight: 700;
+            font-size: 12px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .close-popup {
+            position: absolute; top: -8px; right: -8px;
+            background: #ff4757; width: 22px; height: 22px;
+            border-radius: 50%; display: grid; place-items: center;
+            font-size: 12px; cursor: pointer; color: white;
+        }
+
+        /* --- Nav & Hero Styles --- */
+        nav {
+            padding: 25px 5%; display: flex; justify-content: space-between;
+            align-items: center; position: fixed; width: 100%; z-index: 1000;
             backdrop-filter: blur(10px);
         }
 
-        .logo {
-            font-size: 26px;
-            font-weight: 900;
-            color: var(--accent);
-            letter-spacing: 2px;
-            text-shadow: 0 0 20px rgba(0, 210, 255, 0.5);
-        }
+        .logo { font-size: 26px; font-weight: 900; color: var(--accent); letter-spacing: 2px; }
 
-        /* --- Hero Container --- */
-        .hero {
-            padding-top: 120px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-        }
+        .hero { padding-top: 120px; display: flex; flex-direction: column; align-items: center; text-align: center; }
 
-        /* --- ইউনিক স্লাইডার উইন্ডো (Floating Style) --- */
         .slider-window {
-            width: 90%;
-            max-width: 800px;
-            height: 350px;
-            border-radius: 30px;
-            overflow: hidden;
-            position: relative;
-            box-shadow: 0 30px 60px rgba(0,0,0,0.6);
-            border: 1px solid var(--border);
-            margin-bottom: 40px;
-            background: var(--glass);
+            width: 90%; max-width: 800px; height: 350px;
+            border-radius: 30px; overflow: hidden; position: relative;
+            box-shadow: 0 30px 60px rgba(0,0,0,0.6); border: 1px solid var(--border);
+            margin-bottom: 40px; background: var(--glass);
         }
 
-        .swiper { width: 100%; height: 100%; }
-        .swiper-slide img {
-            width: 100%; height: 100%;
-            object-fit: cover;
-            filter: brightness(0.8);
-        }
+        .swiper-slide img { width: 100%; height: 100%; object-fit: cover; filter: brightness(0.8); }
 
         .slide-overlay {
-            position: absolute;
-            bottom: 0; left: 0; width: 100%;
-            padding: 40px 20px 20px;
-            background: linear-gradient(transparent, rgba(0,26,44,0.9));
+            position: absolute; bottom: 0; left: 0; width: 100%;
+            padding: 40px 20px 20px; background: linear-gradient(transparent, rgba(0,26,44,0.9));
             text-align: left;
         }
 
-        .slide-overlay h2 { font-size: 24px; color: var(--accent); }
-
-        /* --- Content Styling --- */
         .hero-text h1 {
-            font-size: clamp(2rem, 10vw, 4.5rem);
-            font-weight: 900;
-            line-height: 1;
-            margin-bottom: 15px;
+            font-size: clamp(2rem, 10vw, 4.5rem); font-weight: 900;
+            line-height: 1; margin-bottom: 15px;
             background: linear-gradient(to bottom, #fff, #888);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
         }
 
-        .hero-text p {
-            font-size: 1.1rem;
-            color: #94a3b8;
-            max-width: 600px;
-            margin: 0 auto 40px;
-            font-weight: 300;
-        }
+        .hero-text p { font-size: 1.1rem; color: #94a3b8; max-width: 600px; margin: 0 auto 40px; }
 
-        /* --- লগইন বাটন --- */
-        .login-section { margin-bottom: 60px; }
         .google-btn {
-            background: white;
-            color: #001a2c;
-            padding: 18px 45px;
-            border-radius: 100px;
-            font-weight: 700;
-            font-size: 1.1rem;
-            border: none;
-            cursor: pointer;
-            display: flex; align-items: center; gap: 15px;
-            transition: 0.5s cubic-bezier(0.2, 1, 0.3, 1);
-            box-shadow: 0 15px 30px rgba(0, 210, 255, 0.2);
+            background: white; color: #001a2c; padding: 18px 45px;
+            border-radius: 100px; font-weight: 700; font-size: 1.1rem;
+            border: none; cursor: pointer; display: flex; align-items: center; gap: 15px;
+            transition: 0.5s; box-shadow: 0 15px 30px rgba(0, 210, 255, 0.2);
         }
 
-        .google-btn:hover {
-            transform: scale(1.05) translateY(-5px);
-            box-shadow: 0 20px 40px rgba(0, 210, 255, 0.4);
-        }
+        .google-btn:hover { transform: scale(1.05) translateY(-5px); }
 
-        /* --- Features Grid --- */
         .features-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            width: 90%;
-            max-width: 900px;
-            margin-bottom: 50px;
+            display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;
+            width: 90%; max-width: 900px; margin-bottom: 50px;
         }
 
-        .f-card {
-            background: var(--glass);
-            padding: 30px 20px;
-            border-radius: 24px;
-            border: 1px solid var(--border);
-            transition: 0.4s;
-        }
-
-        .f-card:hover { background: rgba(255,255,255,0.07); transform: translateY(-10px); }
+        .f-card { background: var(--glass); padding: 30px 20px; border-radius: 24px; border: 1px solid var(--border); transition: 0.4s; }
         .f-card i { font-size: 1.8rem; color: var(--accent); margin-bottom: 15px; display: block; }
-        .f-card h3 { font-size: 0.85rem; letter-spacing: 1px; font-weight: 600; }
 
-        /* --- Admin UI --- */
-        .three-dots-btn { width: 45px; height: 45px; background: var(--glass); display: grid; place-items: center; border-radius: 15px; cursor: pointer; border: 1px solid var(--border); }
+        .three-dots-btn { width: 45px; height: 45px; background: var(--glass); display: grid; place-items: center; border-radius: 15px; cursor: pointer; }
         .admin-dropdown {
             display: none; position: absolute; right: 5%; top: 90px;
             background: #001a2c; border: 1px solid var(--border);
-            width: 200px; border-radius: 20px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+            width: 200px; border-radius: 20px; overflow: hidden;
         }
-        .admin-dropdown a { display: block; padding: 15px 20px; color: white; text-decoration: none; font-size: 14px; transition: 0.3s; }
-        .admin-dropdown a:hover { background: var(--accent); color: black; }
-        .admin-dropdown.show { display: block; animation: slideDown 0.3s ease; }
+        .admin-dropdown a { display: block; padding: 15px 20px; color: white; text-decoration: none; font-size: 14px; }
+        .admin-dropdown.show { display: block; }
 
-        @keyframes slideDown { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
-
-        @media (max-width: 768px) {
-            .features-grid { grid-template-columns: 1fr; }
-            .slider-window { height: 250px; }
-        }
+        @media (max-width: 768px) { .features-grid { grid-template-columns: 1fr; } .slider-window { height: 250px; } }
     </style>
 </head>
 <body>
+
+    <div class="app-popup" id="appPopup">
+        <div class="close-popup" id="closePopup"><i class="fa fa-times"></i></div>
+        <div class="app-icon-box"><i class="fa fa-mobile-alt"></i></div>
+        <div class="app-text">
+            <h4>MS STORE Mobile App</h4>
+            <p>সেরা অভিজ্ঞতার জন্য অ্যাপ ডাউনলোড করুন</p>
+        </div>
+        <button class="btn-download" id="downloadApp">Download</button>
+    </div>
 
     <nav>
         <div class="logo">MS STORE</div>
@@ -238,34 +226,33 @@
         const auth = getAuth(app);
         const provider = new GoogleAuthProvider();
 
-        // লগইন লজিক
         document.getElementById('googleLoginBtn').onclick = () => {
-            signInWithPopup(auth, provider)
-            .then(() => window.location.href = "shop.html")
-            .catch((e) => console.log(e.message));
+            signInWithPopup(auth, provider).then(() => window.location.href = "shop.html");
         };
 
-        onAuthStateChanged(auth, (user) => {
-            if (user) window.location.href = "shop.html";
-        });
+        onAuthStateChanged(auth, (user) => { if (user) window.location.href = "shop.html"; });
 
-        // স্লাইডার কন্ট্রোল (Swiper)
         var swiper = new Swiper(".mySwiper", {
-            effect: "coverflow",
-            grabCursor: true,
-            centeredSlides: true,
-            slidesPerView: "auto",
-            loop: true,
-            autoplay: { delay: 3000, disableOnInteraction: false },
+            effect: "coverflow", grabCursor: true, centeredSlides: true,
+            slidesPerView: "auto", loop: true, autoplay: { delay: 3000 }
         });
 
-        // ড্রপডাউন
+        // App Popup Logic
+        const popup = document.getElementById('appPopup');
+        const closeBtn = document.getElementById('closePopup');
+        const downloadBtn = document.getElementById('downloadApp');
+
+        setTimeout(() => { popup.classList.add('active'); }, 5000); // ৫ সেকেন্ড পর পপআপ আসবে
+
+        closeBtn.onclick = () => { popup.classList.remove('active'); };
+
+        downloadBtn.onclick = () => {
+            window.location.href = "https://ms-storebd.github.io/ms-shop/"; // আপনার অ্যাপের লিঙ্ক
+        };
+
         const menuToggle = document.getElementById('menuToggle');
         const dropdown = document.getElementById('dropdownMenu');
-        menuToggle.onclick = (e) => {
-            e.stopPropagation();
-            dropdown.classList.toggle('show');
-        };
+        menuToggle.onclick = (e) => { e.stopPropagation(); dropdown.classList.toggle('show'); };
         window.onclick = () => dropdown.classList.remove('show');
     </script>
 </body>
