--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -244,7 +244,7 @@
                         resultDiv.innerHTML = `
                             <div style="background: rgba(255,255,255,0.05); padding: 12px; border-radius: 12px; border: 1px solid #334155;">
                                 <div style="display:flex; align-items:center; gap:10px; margin-bottom:10px;">
-                                    <img src="${foundUser.photoURL || 'https://www.w3schools.com/howto/img_avatar.png'}" style="width:40px; height:40px; border-radius:50%; border:1px solid var(--primary);">
+                                    <img src="${foundUser.photoURL || 'https://via.placeholder.com/40'}" style="width:40px; height:40px; border-radius:50%; border:1px solid var(--primary);">
                                     <div><b style="font-size:14px; color:var(--primary);">${foundUser.displayName || 'User'}</b><br><small>${foundUser.email}</small></div>
                                 </div>
                                 <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap:5px; text-align:center; margin-bottom:10px;">
@@ -345,7 +345,7 @@
 
     function getFormData() {
         const name = document.getElementById('p-name').value,
-              mainCat = document.getElementById('p-main-category').value,
+              mainCat               mainCat = document.getElementById('p-main-category').value,
               subCat = document.getElementById('p-category').value,
               price = document.getElementById('p-price').value,
               stock = document.getElementById('p-stock').value,
